--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "pretty": "prettier --write src/**/*.{js,vue,css,scss,html}"
   },
   "dependencies": {
     "chart.js": "^4.4.2",
